src/frontend/snobol4/snobol4.output
Nonterminals useless in grammar

    opt_pattern


Rules useless in grammar

   76 opt_pattern: expr3
   77            | %empty


Grammar

    0 $accept: top $end

    1 top: program

    2 program: program stmt
    3        | stmt

    4 stmt: opt_label opt_subject opt_repl opt_goto TK_STMT_END

    5 opt_label: TK_LABEL
    6          | %empty

    7 opt_subject: expr3
    8            | %empty

    9 opt_repl: TK_ASSIGNMENT expr0
   10         | %empty

   11 opt_goto: TK_GOTO
   12         | %empty

   13 expr0: expr2 TK_ASSIGNMENT expr0
   14      | expr2 TK_MATCH expr0
   15      | expr2

   16 expr2: expr2 TK_AMPERSAND expr3
   17      | expr3

   18 expr3: expr3 TK_ALTERNATION expr4
   19      | expr4

   20 expr4: expr4 TK_CONCAT expr5
   21      | expr5

   22 expr5: expr5 TK_AT_SIGN expr6
   23      | expr6

   24 expr6: expr6 TK_ADDITION expr7
   25      | expr6 TK_SUBTRACTION expr7
   26      | expr7

   27 expr7: expr7 TK_POUND expr8
   28      | expr8

   29 expr8: expr8 TK_DIVISION expr9
   30      | expr9

   31 expr9: expr9 TK_MULTIPLICATION expr10
   32      | expr10

   33 expr10: expr10 TK_PERCENT expr11
   34       | expr11

   35 expr11: expr12 TK_EXPONENTIATION expr11
   36       | expr12

   37 expr12: expr12 TK_IMMEDIATE_ASSIGN expr13
   38       | expr12 TK_COND_ASSIGN expr13
   39       | expr13

   40 expr13: expr14 TK_TILDE expr13
   41       | expr14

   42 expr14: TK_UN_AT_SIGN expr14
   43       | TK_UN_TILDE expr14
   44       | TK_UN_QUESTION_MARK expr14
   45       | TK_UN_AMPERSAND expr14
   46       | TK_UN_PLUS expr14
   47       | TK_UN_MINUS expr14
   48       | TK_UN_ASTERISK expr14
   49       | TK_UN_DOLLAR_SIGN expr14
   50       | TK_UN_PERIOD expr14
   51       | TK_UN_EXCLAMATION expr14
   52       | TK_UN_PERCENT expr14
   53       | TK_UN_SLASH expr14
   54       | TK_UN_POUND expr14
   55       | TK_UN_EQUAL expr14
   56       | TK_UN_VERTICAL_BAR expr14
   57       | expr15

   58 expr15: expr15 TK_LBRACK exprlist TK_RBRACK
   59       | expr15 TK_LANGLE exprlist TK_RANGLE
   60       | expr17

   61 exprlist: exprlist_ne
   62         | %empty

   63 exprlist_ne: exprlist_ne TK_COMMA expr0
   64            | exprlist_ne TK_COMMA
   65            | expr0

   66 expr17: TK_LPAREN expr0 TK_RPAREN
   67       | TK_LPAREN expr0 TK_COMMA exprlist_ne TK_RPAREN
   68       | TK_LPAREN TK_RPAREN
   69       | TK_FUNCTION TK_LPAREN exprlist TK_RPAREN
   70       | TK_IDENT
   71       | TK_END
   72       | TK_KEYWORD
   73       | TK_STR
   74       | TK_INT
   75       | TK_REAL


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    TK_IDENT <tok> (258) 70
    TK_FUNCTION <tok> (259) 69
    TK_KEYWORD <tok> (260) 72
    TK_END <tok> (261) 71
    TK_INT <tok> (262) 74
    TK_REAL <tok> (263) 75
    TK_STR <tok> (264) 73
    TK_LABEL <tok> (265) 5
    TK_GOTO <tok> (266) 11
    TK_STMT_END <tok> (267) 4
    TK_ASSIGNMENT (268) 9 13
    TK_MATCH (269) 14
    TK_ALTERNATION (270) 18
    TK_ADDITION (271) 24
    TK_SUBTRACTION (272) 25
    TK_MULTIPLICATION (273) 31
    TK_DIVISION (274) 29
    TK_EXPONENTIATION (275) 35
    TK_IMMEDIATE_ASSIGN (276) 37
    TK_COND_ASSIGN (277) 38
    TK_AMPERSAND (278) 16
    TK_AT_SIGN (279) 22
    TK_POUND (280) 27
    TK_PERCENT (281) 33
    TK_TILDE (282) 40
    TK_UN_AT_SIGN (283) 42
    TK_UN_TILDE (284) 43
    TK_UN_QUESTION_MARK (285) 44
    TK_UN_AMPERSAND (286) 45
    TK_UN_PLUS (287) 46
    TK_UN_MINUS (288) 47
    TK_UN_ASTERISK (289) 48
    TK_UN_DOLLAR_SIGN (290) 49
    TK_UN_PERIOD (291) 50
    TK_UN_EXCLAMATION (292) 51
    TK_UN_PERCENT (293) 52
    TK_UN_SLASH (294) 53
    TK_UN_POUND (295) 54
    TK_UN_EQUAL (296) 55
    TK_UN_VERTICAL_BAR (297) 56
    TK_CONCAT (298) 20
    TK_COMMA (299) 63 64 67
    TK_LPAREN (300) 66 67 68 69
    TK_RPAREN (301) 66 67 68 69
    TK_LBRACK (302) 58
    TK_RBRACK (303) 58
    TK_LANGLE (304) 59
    TK_RANGLE (305) 59


Nonterminals, with rules where they appear

    $accept (51)
        on left: 0
    top (52)
        on left: 1
        on right: 0
    program (53)
        on left: 2 3
        on right: 1 2
    stmt (54)
        on left: 4
        on right: 2 3
    opt_label <tok> (55)
        on left: 5 6
        on right: 4
    opt_subject <expr> (56)
        on left: 7 8
        on right: 4
    opt_repl <expr> (57)
        on left: 9 10
        on right: 4
    opt_goto <tok> (58)
        on left: 11 12
        on right: 4
    expr0 <expr> (59)
        on left: 13 14 15
        on right: 9 13 14 63 65 66 67
    expr2 <expr> (60)
        on left: 16 17
        on right: 13 14 15 16
    expr3 <expr> (61)
        on left: 18 19
        on right: 7 16 17 18
    expr4 <expr> (62)
        on left: 20 21
        on right: 18 19 20
    expr5 <expr> (63)
        on left: 22 23
        on right: 20 21 22
    expr6 <expr> (64)
        on left: 24 25 26
        on right: 22 23 24 25
    expr7 <expr> (65)
        on left: 27 28
        on right: 24 25 26 27
    expr8 <expr> (66)
        on left: 29 30
        on right: 27 28 29
    expr9 <expr> (67)
        on left: 31 32
        on right: 29 30 31
    expr10 <expr> (68)
        on left: 33 34
        on right: 31 32 33
    expr11 <expr> (69)
        on left: 35 36
        on right: 33 34 35
    expr12 <expr> (70)
        on left: 37 38 39
        on right: 35 36 37 38
    expr13 <expr> (71)
        on left: 40 41
        on right: 37 38 39 40
    expr14 <expr> (72)
        on left: 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57
        on right: 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56
    expr15 <expr> (73)
        on left: 58 59 60
        on right: 57 58 59
    exprlist <expr> (74)
        on left: 61 62
        on right: 58 59 69
    exprlist_ne <expr> (75)
        on left: 63 64 65
        on right: 61 63 64 67
    expr17 <expr> (76)
        on left: 66 67 68 69 70 71 72 73 74 75
        on right: 60


State 0

    0 $accept: . top $end
    1 top: . program
    2 program: . program stmt
    3        | . stmt
    4 stmt: . opt_label opt_subject opt_repl opt_goto TK_STMT_END
    5 opt_label: . TK_LABEL
    6          | %empty .  [TK_IDENT, TK_FUNCTION, TK_KEYWORD, TK_END, TK_INT, TK_REAL, TK_STR, TK_GOTO, TK_STMT_END, TK_ASSIGNMENT, TK_UN_AT_SIGN, TK_UN_TILDE, TK_UN_QUESTION_MARK, TK_UN_AMPERSAND, TK_UN_PLUS, TK_UN_MINUS, TK_UN_ASTERISK, TK_UN_DOLLAR_SIGN, TK_UN_PERIOD, TK_UN_EXCLAMATION, TK_UN_PERCENT, TK_UN_SLASH, TK_UN_POUND, TK_UN_EQUAL, TK_UN_VERTICAL_BAR, TK_LPAREN]

    TK_LABEL  shift, and go to state 1

    $default  reduce using rule 6 (opt_label)

    top        go to state 2
    program    go to state 3
    stmt       go to state 4
    opt_label  go to state 5


State 1

    5 opt_label: TK_LABEL .

    $default  reduce using rule 5 (opt_label)


State 2

    0 $accept: top . $end

    $end  shift, and go to state 6


State 3

    1 top: program .  [$end]
    2 program: program . stmt
    4 stmt: . opt_label opt_subject opt_repl opt_goto TK_STMT_END
    5 opt_label: . TK_LABEL
    6          | %empty .  [TK_IDENT, TK_FUNCTION, TK_KEYWORD, TK_END, TK_INT, TK_REAL, TK_STR, TK_GOTO, TK_STMT_END, TK_ASSIGNMENT, TK_UN_AT_SIGN, TK_UN_TILDE, TK_UN_QUESTION_MARK, TK_UN_AMPERSAND, TK_UN_PLUS, TK_UN_MINUS, TK_UN_ASTERISK, TK_UN_DOLLAR_SIGN, TK_UN_PERIOD, TK_UN_EXCLAMATION, TK_UN_PERCENT, TK_UN_SLASH, TK_UN_POUND, TK_UN_EQUAL, TK_UN_VERTICAL_BAR, TK_LPAREN]

    TK_LABEL  shift, and go to state 1

    $end      reduce using rule 1 (top)
    $default  reduce using rule 6 (opt_label)

    stmt       go to state 7
    opt_label  go to state 5


State 4

    3 program: stmt .

    $default  reduce using rule 3 (program)


State 5

    4 stmt: opt_label . opt_subject opt_repl opt_goto TK_STMT_END
    7 opt_subject: . expr3
    8            | %empty .  [TK_GOTO, TK_STMT_END, TK_ASSIGNMENT]
   18 expr3: . expr3 TK_ALTERNATION expr4
   19      | . expr4
   20 expr4: . expr4 TK_CONCAT expr5
   21      | . expr5
   22 expr5: . expr5 TK_AT_SIGN expr6
   23      | . expr6
   24 expr6: . expr6 TK_ADDITION expr7
   25      | . expr6 TK_SUBTRACTION expr7
   26      | . expr7
   27 expr7: . expr7 TK_POUND expr8
   28      | . expr8
   29 expr8: . expr8 TK_DIVISION expr9
   30      | . expr9
   31 expr9: . expr9 TK_MULTIPLICATION expr10
   32      | . expr10
   33 expr10: . expr10 TK_PERCENT expr11
   34       | . expr11
   35 expr11: . expr12 TK_EXPONENTIATION expr11
   36       | . expr12
   37 expr12: . expr12 TK_IMMEDIATE_ASSIGN expr13
   38       | . expr12 TK_COND_ASSIGN expr13
   39       | . expr13
   40 expr13: . expr14 TK_TILDE expr13
   41       | . expr14
   42 expr14: . TK_UN_AT_SIGN expr14
   43       | . TK_UN_TILDE expr14
   44       | . TK_UN_QUESTION_MARK expr14
   45       | . TK_UN_AMPERSAND expr14
   46       | . TK_UN_PLUS expr14
   47       | . TK_UN_MINUS expr14
   48       | . TK_UN_ASTERISK expr14
   49       | . TK_UN_DOLLAR_SIGN expr14
   50       | . TK_UN_PERIOD expr14
   51       | . TK_UN_EXCLAMATION expr14
   52       | . TK_UN_PERCENT expr14
   53       | . TK_UN_SLASH expr14
   54       | . TK_UN_POUND expr14
   55       | . TK_UN_EQUAL expr14
   56       | . TK_UN_VERTICAL_BAR expr14
   57       | . expr15
   58 expr15: . expr15 TK_LBRACK exprlist TK_RBRACK
   59       | . expr15 TK_LANGLE exprlist TK_RANGLE
   60       | . expr17
   66 expr17: . TK_LPAREN expr0 TK_RPAREN
   67       | . TK_LPAREN expr0 TK_COMMA exprlist_ne TK_RPAREN
   68       | . TK_LPAREN TK_RPAREN
   69       | . TK_FUNCTION TK_LPAREN exprlist TK_RPAREN
   70       | . TK_IDENT
   71       | . TK_END
   72       | . TK_KEYWORD
   73       | . TK_STR
   74       | . TK_INT
   75       | . TK_REAL

    TK_IDENT             shift, and go to state 8
    TK_FUNCTION          shift, and go to state 9
    TK_KEYWORD           shift, and go to state 10
    TK_END               shift, and go to state 11
    TK_INT               shift, and go to state 12
    TK_REAL              shift, and go to state 13
    TK_STR               shift, and go to state 14
    TK_UN_AT_SIGN        shift, and go to state 15
    TK_UN_TILDE          shift, and go to state 16
    TK_UN_QUESTION_MARK  shift, and go to state 17
    TK_UN_AMPERSAND      shift, and go to state 18
    TK_UN_PLUS           shift, and go to state 19
    TK_UN_MINUS          shift, and go to state 20
    TK_UN_ASTERISK       shift, and go to state 21
    TK_UN_DOLLAR_SIGN    shift, and go to state 22
    TK_UN_PERIOD         shift, and go to state 23
    TK_UN_EXCLAMATION    shift, and go to state 24
    TK_UN_PERCENT        shift, and go to state 25
    TK_UN_SLASH          shift, and go to state 26
    TK_UN_POUND          shift, and go to state 27
    TK_UN_EQUAL          shift, and go to state 28
    TK_UN_VERTICAL_BAR   shift, and go to state 29
    TK_LPAREN            shift, and go to state 30

    $default  reduce using rule 8 (opt_subject)

    opt_subject  go to state 31
    expr3        go to state 32
    expr4        go to state 33
    expr5        go to state 34
    expr6        go to state 35
    expr7        go to state 36
    expr8        go to state 37
    expr9        go to state 38
    expr10       go to state 39
    expr11       go to state 40
    expr12       go to state 41
    expr13       go to state 42
    expr14       go to state 43
    expr15       go to state 44
    expr17       go to state 45


State 6

    0 $accept: top $end .

    $default  accept


State 7

    2 program: program stmt .

    $default  reduce using rule 2 (program)


State 8

   70 expr17: TK_IDENT .

    $default  reduce using rule 70 (expr17)


State 9

   69 expr17: TK_FUNCTION . TK_LPAREN exprlist TK_RPAREN

    TK_LPAREN  shift, and go to state 46


State 10

   72 expr17: TK_KEYWORD .

    $default  reduce using rule 72 (expr17)


State 11

   71 expr17: TK_END .

    $default  reduce using rule 71 (expr17)


State 12

   74 expr17: TK_INT .

    $default  reduce using rule 74 (expr17)


State 13

   75 expr17: TK_REAL .

    $default  reduce using rule 75 (expr17)


State 14

   73 expr17: TK_STR .

    $default  reduce using rule 73 (expr17)


State 15

   42 expr14: . TK_UN_AT_SIGN expr14
   42       | TK_UN_AT_SIGN . expr14
   43       | . TK_UN_TILDE expr14
   44       | . TK_UN_QUESTION_MARK expr14
   45       | . TK_UN_AMPERSAND expr14
   46       | . TK_UN_PLUS expr14
   47       | . TK_UN_MINUS expr14
   48       | . TK_UN_ASTERISK expr14
   49       | . TK_UN_DOLLAR_SIGN expr14
   50       | . TK_UN_PERIOD expr14
   51       | . TK_UN_EXCLAMATION expr14
   52       | . TK_UN_PERCENT expr14
   53       | . TK_UN_SLASH expr14
   54       | . TK_UN_POUND expr14
   55       | . TK_UN_EQUAL expr14
   56       | . TK_UN_VERTICAL_BAR expr14
   57       | . expr15
   58 expr15: . expr15 TK_LBRACK exprlist TK_RBRACK
   59       | . expr15 TK_LANGLE exprlist TK_RANGLE
   60       | . expr17
   66 expr17: . TK_LPAREN expr0 TK_RPAREN
   67       | . TK_LPAREN expr0 TK_COMMA exprlist_ne TK_RPAREN
   68       | . TK_LPAREN TK_RPAREN
   69       | . TK_FUNCTION TK_LPAREN exprlist TK_RPAREN
   70       | . TK_IDENT
   71       | . TK_END
   72       | . TK_KEYWORD
   73       | . TK_STR
   74       | . TK_INT
   75       | . TK_REAL

    TK_IDENT             shift, and go to state 8
    TK_FUNCTION          shift, and go to state 9
    TK_KEYWORD           shift, and go to state 10
    TK_END               shift, and go to state 11
    TK_INT               shift, and go to state 12
    TK_REAL              shift, and go to state 13
    TK_STR               shift, and go to state 14
    TK_UN_AT_SIGN        shift, and go to state 15
    TK_UN_TILDE          shift, and go to state 16
    TK_UN_QUESTION_MARK  shift, and go to state 17
    TK_UN_AMPERSAND      shift, and go to state 18
    TK_UN_PLUS           shift, and go to state 19
    TK_UN_MINUS          shift, and go to state 20
    TK_UN_ASTERISK       shift, and go to state 21
    TK_UN_DOLLAR_SIGN    shift, and go to state 22
    TK_UN_PERIOD         shift, and go to state 23
    TK_UN_EXCLAMATION    shift, and go to state 24
    TK_UN_PERCENT        shift, and go to state 25
    TK_UN_SLASH          shift, and go to state 26
    TK_UN_POUND          shift, and go to state 27
    TK_UN_EQUAL          shift, and go to state 28
    TK_UN_VERTICAL_BAR   shift, and go to state 29
    TK_LPAREN            shift, and go to state 30

    expr14  go to state 47
    expr15  go to state 44
    expr17  go to state 45


State 16

   42 expr14: . TK_UN_AT_SIGN expr14
   43       | . TK_UN_TILDE expr14
   43       | TK_UN_TILDE . expr14
   44       | . TK_UN_QUESTION_MARK expr14
   45       | . TK_UN_AMPERSAND expr14
   46       | . TK_UN_PLUS expr14
   47       | . TK_UN_MINUS expr14
   48       | . TK_UN_ASTERISK expr14
   49       | . TK_UN_DOLLAR_SIGN expr14
   50       | . TK_UN_PERIOD expr14
   51       | . TK_UN_EXCLAMATION expr14
   52       | . TK_UN_PERCENT expr14
   53       | . TK_UN_SLASH expr14
   54       | . TK_UN_POUND expr14
   55       | . TK_UN_EQUAL expr14
   56       | . TK_UN_VERTICAL_BAR expr14
   57       | . expr15
   58 expr15: . expr15 TK_LBRACK exprlist TK_RBRACK
   59       | . expr15 TK_LANGLE exprlist TK_RANGLE
   60       | . expr17
   66 expr17: . TK_LPAREN expr0 TK_RPAREN
   67       | . TK_LPAREN expr0 TK_COMMA exprlist_ne TK_RPAREN
   68       | . TK_LPAREN TK_RPAREN
   69       | . TK_FUNCTION TK_LPAREN exprlist TK_RPAREN
   70       | . TK_IDENT
   71       | . TK_END
   72       | . TK_KEYWORD
   73       | . TK_STR
   74       | . TK_INT
   75       | . TK_REAL

    TK_IDENT             shift, and go to state 8
    TK_FUNCTION          shift, and go to state 9
    TK_KEYWORD           shift, and go to state 10
    TK_END               shift, and go to state 11
    TK_INT               shift, and go to state 12
    TK_REAL              shift, and go to state 13
    TK_STR               shift, and go to state 14
    TK_UN_AT_SIGN        shift, and go to state 15
    TK_UN_TILDE          shift, and go to state 16
    TK_UN_QUESTION_MARK  shift, and go to state 17
    TK_UN_AMPERSAND      shift, and go to state 18
    TK_UN_PLUS           shift, and go to state 19
    TK_UN_MINUS          shift, and go to state 20
    TK_UN_ASTERISK       shift, and go to state 21
    TK_UN_DOLLAR_SIGN    shift, and go to state 22
    TK_UN_PERIOD         shift, and go to state 23
    TK_UN_EXCLAMATION    shift, and go to state 24
    TK_UN_PERCENT        shift, and go to state 25
    TK_UN_SLASH          shift, and go to state 26
    TK_UN_POUND          shift, and go to state 27
    TK_UN_EQUAL          shift, and go to state 28
    TK_UN_VERTICAL_BAR   shift, and go to state 29
    TK_LPAREN            shift, and go to state 30

    expr14  go to state 48
    expr15  go to state 44
    expr17  go to state 45


State 17

   42 expr14: . TK_UN_AT_SIGN expr14
   43       | . TK_UN_TILDE expr14
   44       | . TK_UN_QUESTION_MARK expr14
   44       | TK_UN_QUESTION_MARK . expr14
   45       | . TK_UN_AMPERSAND expr14
   46       | . TK_UN_PLUS expr14
   47       | . TK_UN_MINUS expr14
   48       | . TK_UN_ASTERISK expr14
   49       | . TK_UN_DOLLAR_SIGN expr14
   50       | . TK_UN_PERIOD expr14
   51       | . TK_UN_EXCLAMATION expr14
   52       | . TK_UN_PERCENT expr14
   53       | . TK_UN_SLASH expr14
   54       | . TK_UN_POUND expr14
   55       | . TK_UN_EQUAL expr14
   56       | . TK_UN_VERTICAL_BAR expr14
   57       | . expr15
   58 expr15: . expr15 TK_LBRACK exprlist TK_RBRACK
   59       | . expr15 TK_LANGLE exprlist TK_RANGLE
   60       | . expr17
   66 expr17: . TK_LPAREN expr0 TK_RPAREN
   67       | . TK_LPAREN expr0 TK_COMMA exprlist_ne TK_RPAREN
   68       | . TK_LPAREN TK_RPAREN
   69       | . TK_FUNCTION TK_LPAREN exprlist TK_RPAREN
   70       | . TK_IDENT
   71       | . TK_END
   72       | . TK_KEYWORD
   73       | . TK_STR
   74       | . TK_INT
   75       | . TK_REAL

    TK_IDENT             shift, and go to state 8
    TK_FUNCTION          shift, and go to state 9
    TK_KEYWORD           shift, and go to state 10
    TK_END               shift, and go to state 11
    TK_INT               shift, and go to state 12
    TK_REAL              shift, and go to state 13
    TK_STR               shift, and go to state 14
    TK_UN_AT_SIGN        shift, and go to state 15
    TK_UN_TILDE          shift, and go to state 16
    TK_UN_QUESTION_MARK  shift, and go to state 17
    TK_UN_AMPERSAND      shift, and go to state 18
    TK_UN_PLUS           shift, and go to state 19
    TK_UN_MINUS          shift, and go to state 20
    TK_UN_ASTERISK       shift, and go to state 21
    TK_UN_DOLLAR_SIGN    shift, and go to state 22
    TK_UN_PERIOD         shift, and go to state 23
    TK_UN_EXCLAMATION    shift, and go to state 24
    TK_UN_PERCENT        shift, and go to state 25
    TK_UN_SLASH          shift, and go to state 26
    TK_UN_POUND          shift, and go to state 27
    TK_UN_EQUAL          shift, and go to state 28
    TK_UN_VERTICAL_BAR   shift, and go to state 29
    TK_LPAREN            shift, and go to state 30

    expr14  go to state 49
    expr15  go to state 44
    expr17  go to state 45


State 18

   42 expr14: . TK_UN_AT_SIGN expr14
   43       | . TK_UN_TILDE expr14
   44       | . TK_UN_QUESTION_MARK expr14
   45       | . TK_UN_AMPERSAND expr14
   45       | TK_UN_AMPERSAND . expr14
   46       | . TK_UN_PLUS expr14
   47       | . TK_UN_MINUS expr14
   48       | . TK_UN_ASTERISK expr14
   49       | . TK_UN_DOLLAR_SIGN expr14
   50       | . TK_UN_PERIOD expr14
   51       | . TK_UN_EXCLAMATION expr14
   52       | . TK_UN_PERCENT expr14
   53       | . TK_UN_SLASH expr14
   54       | . TK_UN_POUND expr14
   55       | . TK_UN_EQUAL expr14
   56       | . TK_UN_VERTICAL_BAR expr14
   57       | . expr15
   58 expr15: . expr15 TK_LBRACK exprlist TK_RBRACK
   59       | . expr15 TK_LANGLE exprlist TK_RANGLE
   60       | . expr17
   66 expr17: . TK_LPAREN expr0 TK_RPAREN
   67       | . TK_LPAREN expr0 TK_COMMA exprlist_ne TK_RPAREN
   68       | . TK_LPAREN TK_RPAREN
   69       | . TK_FUNCTION TK_LPAREN exprlist TK_RPAREN
   70       | . TK_IDENT
   71       | . TK_END
   72       | . TK_KEYWORD
   73       | . TK_STR
   74       | . TK_INT
   75       | . TK_REAL

    TK_IDENT             shift, and go to state 8
    TK_FUNCTION          shift, and go to state 9
    TK_KEYWORD           shift, and go to state 10
    TK_END               shift, and go to state 11
    TK_INT               shift, and go to state 12
    TK_REAL              shift, and go to state 13
    TK_STR               shift, and go to state 14
    TK_UN_AT_SIGN        shift, and go to state 15
    TK_UN_TILDE          shift, and go to state 16
    TK_UN_QUESTION_MARK  shift, and go to state 17
    TK_UN_AMPERSAND      shift, and go to state 18
    TK_UN_PLUS           shift, and go to state 19
    TK_UN_MINUS          shift, and go to state 20
    TK_UN_ASTERISK       shift, and go to state 21
    TK_UN_DOLLAR_SIGN    shift, and go to state 22
    TK_UN_PERIOD         shift, and go to state 23
    TK_UN_EXCLAMATION    shift, and go to state 24
    TK_UN_PERCENT        shift, and go to state 25
    TK_UN_SLASH          shift, and go to state 26
    TK_UN_POUND          shift, and go to state 27
    TK_UN_EQUAL          shift, and go to state 28
    TK_UN_VERTICAL_BAR   shift, and go to state 29
    TK_LPAREN            shift, and go to state 30

    expr14  go to state 50
    expr15  go to state 44
    expr17  go to state 45


State 19

   42 expr14: . TK_UN_AT_SIGN expr14
   43       | . TK_UN_TILDE expr14
   44       | . TK_UN_QUESTION_MARK expr14
   45       | . TK_UN_AMPERSAND expr14
   46       | . TK_UN_PLUS expr14
   46       | TK_UN_PLUS . expr14
   47       | . TK_UN_MINUS expr14
   48       | . TK_UN_ASTERISK expr14
   49       | . TK_UN_DOLLAR_SIGN expr14
   50       | . TK_UN_PERIOD expr14
   51       | . TK_UN_EXCLAMATION expr14
   52       | . TK_UN_PERCENT expr14
   53       | . TK_UN_SLASH expr14
   54       | . TK_UN_POUND expr14
   55       | . TK_UN_EQUAL expr14
   56       | . TK_UN_VERTICAL_BAR expr14
   57       | . expr15
   58 expr15: . expr15 TK_LBRACK exprlist TK_RBRACK
   59       | . expr15 TK_LANGLE exprlist TK_RANGLE
   60       | . expr17
   66 expr17: . TK_LPAREN expr0 TK_RPAREN
   67       | . TK_LPAREN expr0 TK_COMMA exprlist_ne TK_RPAREN
   68       | . TK_LPAREN TK_RPAREN
   69       | . TK_FUNCTION TK_LPAREN exprlist TK_RPAREN
   70       | . TK_IDENT
   71       | . TK_END
   72       | . TK_KEYWORD
   73       | . TK_STR
   74       | . TK_INT
   75       | . TK_REAL

    TK_IDENT             shift, and go to state 8
    TK_FUNCTION          shift, and go to state 9
    TK_KEYWORD           shift, and go to state 10
    TK_END               shift, and go to state 11
    TK_INT               shift, and go to state 12
    TK_REAL              shift, and go to state 13
    TK_STR               shift, and go to state 14
    TK_UN_AT_SIGN        shift, and go to state 15
    TK_UN_TILDE          shift, and go to state 16
    TK_UN_QUESTION_MARK  shift, and go to state 17
    TK_UN_AMPERSAND      shift, and go to state 18
    TK_UN_PLUS           shift, and go to state 19
    TK_UN_MINUS          shift, and go to state 20
    TK_UN_ASTERISK       shift, and go to state 21
    TK_UN_DOLLAR_SIGN    shift, and go to state 22
    TK_UN_PERIOD         shift, and go to state 23
    TK_UN_EXCLAMATION    shift, and go to state 24
    TK_UN_PERCENT        shift, and go to state 25
    TK_UN_SLASH          shift, and go to state 26
    TK_UN_POUND          shift, and go to state 27
    TK_UN_EQUAL          shift, and go to state 28
    TK_UN_VERTICAL_BAR   shift, and go to state 29
    TK_LPAREN            shift, and go to state 30

    expr14  go to state 51
    expr15  go to state 44
    expr17  go to state 45


State 20

   42 expr14: . TK_UN_AT_SIGN expr14
   43       | . TK_UN_TILDE expr14
   44       | . TK_UN_QUESTION_MARK expr14
   45       | . TK_UN_AMPERSAND expr14
   46       | . TK_UN_PLUS expr14
   47       | . TK_UN_MINUS expr14
   47       | TK_UN_MINUS . expr14
   48       | . TK_UN_ASTERISK expr14
   49       | . TK_UN_DOLLAR_SIGN expr14
   50       | . TK_UN_PERIOD expr14
   51       | . TK_UN_EXCLAMATION expr14
   52       | . TK_UN_PERCENT expr14
   53       | . TK_UN_SLASH expr14
   54       | . TK_UN_POUND expr14
   55       | . TK_UN_EQUAL expr14
   56       | . TK_UN_VERTICAL_BAR expr14
   57       | . expr15
   58 expr15: . expr15 TK_LBRACK exprlist TK_RBRACK
   59       | . expr15 TK_LANGLE exprlist TK_RANGLE
   60       | . expr17
   66 expr17: . TK_LPAREN expr0 TK_RPAREN
   67       | . TK_LPAREN expr0 TK_COMMA exprlist_ne TK_RPAREN
   68       | . TK_LPAREN TK_RPAREN
   69       | . TK_FUNCTION TK_LPAREN exprlist TK_RPAREN
   70       | . TK_IDENT
   71       | . TK_END
   72       | . TK_KEYWORD
   73       | . TK_STR
   74       | . TK_INT
   75       | . TK_REAL

    TK_IDENT             shift, and go to state 8
    TK_FUNCTION          shift, and go to state 9
    TK_KEYWORD           shift, and go to state 10
    TK_END               shift, and go to state 11
    TK_INT               shift, and go to state 12
    TK_REAL              shift, and go to state 13
    TK_STR               shift, and go to state 14
    TK_UN_AT_SIGN        shift, and go to state 15
    TK_UN_TILDE          shift, and go to state 16
    TK_UN_QUESTION_MARK  shift, and go to state 17
    TK_UN_AMPERSAND      shift, and go to state 18
    TK_UN_PLUS           shift, and go to state 19
    TK_UN_MINUS          shift, and go to state 20
    TK_UN_ASTERISK       shift, and go to state 21
    TK_UN_DOLLAR_SIGN    shift, and go to state 22
    TK_UN_PERIOD         shift, and go to state 23
    TK_UN_EXCLAMATION    shift, and go to state 24
    TK_UN_PERCENT        shift, and go to state 25
    TK_UN_SLASH          shift, and go to state 26
    TK_UN_POUND          shift, and go to state 27
    TK_UN_EQUAL          shift, and go to state 28
    TK_UN_VERTICAL_BAR   shift, and go to state 29
    TK_LPAREN            shift, and go to state 30

    expr14  go to state 52
    expr15  go to state 44
    expr17  go to state 45


State 21

   42 expr14: . TK_UN_AT_SIGN expr14
   43       | . TK_UN_TILDE expr14
   44       | . TK_UN_QUESTION_MARK expr14
   45       | . TK_UN_AMPERSAND expr14
   46       | . TK_UN_PLUS expr14
   47       | . TK_UN_MINUS expr14
   48       | . TK_UN_ASTERISK expr14
   48       | TK_UN_ASTERISK . expr14
   49       | . TK_UN_DOLLAR_SIGN expr14
   50       | . TK_UN_PERIOD expr14
   51       | . TK_UN_EXCLAMATION expr14
   52       | . TK_UN_PERCENT expr14
   53       | . TK_UN_SLASH expr14
   54       | . TK_UN_POUND expr14
   55       | . TK_UN_EQUAL expr14
   56       | . TK_UN_VERTICAL_BAR expr14
   57       | . expr15
   58 expr15: . expr15 TK_LBRACK exprlist TK_RBRACK
   59       | . expr15 TK_LANGLE exprlist TK_RANGLE
   60       | . expr17
   66 expr17: . TK_LPAREN expr0 TK_RPAREN
   67       | . TK_LPAREN expr0 TK_COMMA exprlist_ne TK_RPAREN
   68       | . TK_LPAREN TK_RPAREN
   69       | . TK_FUNCTION TK_LPAREN exprlist TK_RPAREN
   70       | . TK_IDENT
   71       | . TK_END
   72       | . TK_KEYWORD
   73       | . TK_STR
   74       | . TK_INT
   75       | . TK_REAL

    TK_IDENT             shift, and go to state 8
    TK_FUNCTION          shift, and go to state 9
    TK_KEYWORD           shift, and go to state 10
    TK_END               shift, and go to state 11
    TK_INT               shift, and go to state 12
    TK_REAL              shift, and go to state 13
    TK_STR               shift, and go to state 14
    TK_UN_AT_SIGN        shift, and go to state 15
    TK_UN_TILDE          shift, and go to state 16
    TK_UN_QUESTION_MARK  shift, and go to state 17
    TK_UN_AMPERSAND      shift, and go to state 18
    TK_UN_PLUS           shift, and go to state 19
    TK_UN_MINUS          shift, and go to state 20
    TK_UN_ASTERISK       shift, and go to state 21
    TK_UN_DOLLAR_SIGN    shift, and go to state 22
    TK_UN_PERIOD         shift, and go to state 23
    TK_UN_EXCLAMATION    shift, and go to state 24
    TK_UN_PERCENT        shift, and go to state 25
    TK_UN_SLASH          shift, and go to state 26
    TK_UN_POUND          shift, and go to state 27
    TK_UN_EQUAL          shift, and go to state 28
    TK_UN_VERTICAL_BAR   shift, and go to state 29
    TK_LPAREN            shift, and go to state 30

    expr14  go to state 53
    expr15  go to state 44
    expr17  go to state 45


State 22
